tests/ui/argument-suggestions/exotic-calls.stderr
error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/exotic-calls.rs:2:5
   |
LL |     t(1i32);
   |     ^ ----
   |       |
   |       unexpected argument of type `i32`
   |       help: remove the extra argument
   |
note: callable defined here
  --> $DIR/exotic-calls.rs:1:11
   |
LL | fn foo<T: Fn()>(t: T) {
   |           ^^^^

error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/exotic-calls.rs:7:5
   |
LL |     t(1i32);
   |     ^ ----
   |       |
   |       unexpected argument of type `i32`
   |       help: remove the extra argument
   |
note: type parameter defined here
  --> $DIR/exotic-calls.rs:6:11
   |
LL | fn bar(t: impl Fn()) {
   |           ^^^^^^^^^

error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/exotic-calls.rs:16:5
   |
LL |     baz()(1i32)
   |     ^^^^^ ----
   |           |
   |           unexpected argument of type `i32`
   |           help: remove the extra argument
   |
note: opaque type defined here
  --> $DIR/exotic-calls.rs:11:13
   |
LL | fn baz() -> impl Fn() {
   |             ^^^^^^^^^

error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/exotic-calls.rs:22:5
   |
LL |     x(1i32);
   |     ^ ----
   |       |
   |       unexpected argument of type `i32`
   |       help: remove the extra argument
   |
note: closure defined here
  --> $DIR/exotic-calls.rs:21:13
   |
LL |     let x = || {};
   |             ^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0057`.
